--- a/1011/커피과제/css/style.css
+++ b/1011/커피과제/css/style.css
@@ -245,20 +245,22 @@
     }
     nav{
         width:100%;
-        height:130px;
+        height:auto;
         background-color: #2a1d0a;
     }
     nav ul {
         list-style: none;/*블릿없애기*/
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-wrap: wrap;
+        padding-top: 15px;
     }
     nav ul li{
-        margin-top: 15px;
-        margin-left: 15px;
-        float: left;
+        margin: 0 5px 15px 5px;
     }
     nav ul li a{
-       display: block;
-       /*a 인라인요소 width, height 를 적용하기위해 블록요소로 변경*/
+       display: inline-block;
        width:100px;
        height:40px;
        line-height: 40px;  /*세로중앙정렬*/
