--- a/1217/firstproject/src/main/resources/templates/layouts/footer.mustache
+++ b/1217/firstproject/src/main/resources/templates/layouts/footer.mustache
@@ -1,10 +1,9 @@
 
-<!--푸터-->
+<!--footer-->
 <div class="mb-5 container-fluid">
     <hr>
-    <p>ⓒ Cloudstudying | <a href="#">PRIVACY</a> | <a href="#">Teams</a></p>
+    <p>ⓒ CloudStudying | <a href="#">Privacy</a> | <a href="#">Teams</a> </p>
 </div>
-
 
 </body>
 </html>
