--- a/1217/firstproject/src/main/resources/templates/articles/new.mustache
+++ b/1217/firstproject/src/main/resources/templates/articles/new.mustache
@@ -1,14 +1,15 @@
 
 {{>layouts/header}}
-<form action="/articles/create" method="post" class="container mt-3">
+<form action="/articles/create" method="post" class="container">
     <div class="mb-3">
-        <label for="" class="form-label">제목</label>
+        <label for="title" class="form-label">제목</label>
         <input type="text" class="form-control" name="title">
     </div>
     <div class="mb-3">
-        <label for="" class="form-label">내용</label>
-        <textarea name="content" id="content" class="form-control" rows="3"></textarea>
+        <label for="content" class="form-label">내용</label>
+        <textarea name="content" id="content"  class="form-control"  rows="3"></textarea>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary" >Submit</button>
 </form>
 {{>layouts/footer}}
+
