--- a/1217/firstproject/src/main/resources/templates/greetings.mustache
+++ b/1217/firstproject/src/main/resources/templates/greetings.mustache
@@ -1,8 +1,6 @@
 
 {{>layouts/header}}
-
 <div class="bg-dark text-white p-5">
-    <h1>hello! {{username}}!! 안녕!!</h1>
+    <h1>{{username}}, 반갑습니다.</h1>
 </div>
-
 {{>layouts/footer}}
