--- a/1224/project-study/src/main/resources/templates/member/m_new.mustache
+++ b/1224/project-study/src/main/resources/templates/member/m_new.mustache
@@ -1,5 +1,6 @@
 {{>layouts/header}}
-<form class="container" action="/member/create" method="post">
+<form class="container mt-3" action="/member/create" method="post">
+    <input type="hidden" name="num">
     <div class="mb-3">
         <label class="form-label">아이디(ID)</label>
         <input type="text" class="form-control" name="id">
